ispCP ω 1.0.0 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 _________________________________________________________________
/ @TODO:                                                          \
|         - GUI:                                                  |
|               * to fix: no errors on adding user (custom HP)    |
\_________________________________________________________________/

2007-10-05 Benedikt Heintel
	- GUI:
		* Fixed #746: more relative path in the pma stylesheet

2007-10-04 Johannes Schobig
	- GUI:
		* Fixed #670: Bruteforce isn't working as expected
		* Fixed to login as admin even if isp-control.net is not reachable

2007-10-01 Benedikt Heintel / Johannes Schobig
	- GUI:
		* Fixed #721: Problem with non-standard characters in mail-templates

2007-09-30 Johannes Schobig
	- GUI:
		* Fixed #154: phpMyAdmin should be in restricted are
		* Fixed #358: direct link to logged-in webftp and pma sessions

2007-09-30 Benedikt Heintel
	- CONFIGS:
		* Fixed #733: Typo in php4 & php5 template
	- ENGINE:
		* Fixed #734: Owner for domain-aliases is wrong
	- GUI:
		* Fixed #723: Optical Improvement in design
		* Fixed #730: Error on update personal data
		* Fixed #735: Small error in admin log
	- TOOLS:
    	* Fixed #731: Updated Squirrelmail to 1.4.11

2007-09-29 Raphael Geissert
    - ENGINE:
        * Fixed #555: catchall -> forwarding doesn't work (thanks to Marcel Wiechmann)
    - GUI:
        * Updated ADOdb to version 4.96

2007-09-29 Benedikt Heintel
	- GUI:
		* Fixed #729: Creation of htaccess files cause 500
	- ENGINE:
		* Fixed #728: Creation of domain-aliases fail
	- TOOLS:
		* Updated PMA to 2.11.1
	- LANGAUGES:
		* Updated Dutch PO

2007-09-27 Raphael Geissert
    - GUI:
        * Fixed #717: User assignment does not work (thanks to Marcel Wiechmann)
        * Fixed #635: can't protect a directory with non-standrad characters in its path
        * Fixed #632: can't add an ftp account to a non-standard characters mount point